--- a/src/Odjemalec/hardware-haven/public/manifest.json
+++ b/src/Odjemalec/hardware-haven/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#0b3244"
+  "theme_color": "#0a3346"
 }
