--- a/src/ExpressJS/.env
+++ b/src/ExpressJS/.env
@@ -1,1 +1,3 @@
 PORT=3001
+MONGODB_CONN=mongodb+srv://hardwarehaven:QhTJnPXD6ipaUkSp@cluster0.wjytx9m.mongodb.net/
+JWT_SECRET=PIJEMLASKOSCIJEMUNION
