--- a/src/Odjemalec/hardware-haven/package.json
+++ b/src/Odjemalec/hardware-haven/package.json
@@ -29,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "serve -s build",
+    "build-serve": "react-scripts build && serve -s build"
   },
   "eslintConfig": {
     "extends": [
