added push notifications

--- a/src/Odjemalec/hardware-haven/.env
+++ b/src/Odjemalec/hardware-haven/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_URL=http://localhost:3001/api
+REACT_APP_PUSH_API_KEY=BCmImvDEmQLHig4EWHRvTJuYTLA7zsng_aierf9OKFK9BOE42B2YuZT67_ANmokqJqIA5j_Uawam_6YtjoWUoLY
