--- a/src/ExpressJS/package.json
+++ b/src/ExpressJS/package.json
@@ -17,7 +17,8 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
