--- a/src/Odjemalec/hardware-haven/package.json
+++ b/src/Odjemalec/hardware-haven/package.json
@@ -10,9 +10,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "annyang": "^2.6.1",
     "axios": "^1.7.2",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
@@ -27,9 +30,7 @@
     "workbox-range-requests": "^6.6.0",
     "workbox-routing": "^6.6.0",
     "workbox-strategies": "^6.6.0",
-    "workbox-streams": "^6.6.0",
-    "react-confetti": "^6.1.0",
-    "react-hook-form": "^7.51.5"
+    "workbox-streams": "^6.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.23.1",
+    "serve": "^14.2.3",
     "tailwindcss": "^3.4.3"
   }
 }
